--- a/content/4.get-started-with-elysiajs.md
+++ b/content/4.get-started-with-elysiajs.md
@@ -3,7 +3,7 @@ title: "ElysiaJSに入門してみる"
 description: "ElysiaJSについての個人的なメモ。"
 icon: "&#129418;"
 createdAt: "2024-4-7"
-updatedAt: "2024-4-7"
+updatedAt: "2024-4-23"
 tags: ['Bun', 'ElysiaJS']
 ---
 
@@ -21,7 +21,7 @@ tags: ['Bun', 'ElysiaJS']
 brew install oven-sh/bun/bun
 ```
 
-2024年4月7日時点では、v1.1.2がインストールされた。
+2024年4月7日時点では、v1.1.2がインストールされました。
 
 ## ElysiaJSのインストール
 
@@ -44,7 +44,7 @@ bun create elysia アプリ名
 bun run src/index.ts
 ```
 
-メッセージに従ったが、`bun dev`でも起動できます。  
+上記では、メッセージに従いましたが、`bun dev`でも起動できます。  
 
 [localhost:3000](http://localhost:3000) へアクセスし、「Hello Elysia」と表示されることを確認します。
 
@@ -61,7 +61,7 @@ console.log(
 
 ```
 
-コンソールログの結果は「🦊 Elysia is running at localhost:3000」
+コンソールに「🦊 Elysia is running at localhost:3000」が表示されることを確認します。  
 
 ## マニュアルのインストール
 
@@ -69,7 +69,7 @@ console.log(
 bun add elysia
 ```
 
-dependencyにelysiaが追加されるので、npmスクリプトを下記のように変更します。  
+dependencyにelysiaが追加されるため、npmスクリプトを下記のように変更します。  
 
 ```json
 "scripts": {
