--- a/content/5.get-started-with-hono.md
+++ b/content/5.get-started-with-hono.md
@@ -9,21 +9,21 @@ tags: ['Hono']
 
 - [公式サイト](https://hono.dev/)
 
-HonoはCDNのエッジで動く高速なWebフレームワーク。  
-Cloudflareだけでなく、FastlyやAWS Lambda、Vercelなどでも動くらしい。  
+Honoは、CDNのエッジで動く高速なWebフレームワークです。  
+Cloudflareだけでなく、FastlyやAWS Lambda、Vercelなどでも動くようです。  
 
 ## Honoのインストール
 
-npmを使用してインストールする場合、下記のコマンドを実行する。  
+npmを使用してインストールする場合、下記のコマンドを実行します。  
 
 ```shell
 npm create hono@latest my-app
 ```
 
-プロジェクトを作成することができたら下記のコマンドを実行し、アプリを起動する。  
+プロジェクトを作成したら下記のコマンドを実行し、アプリを起動します。  
 
 ```shell
 npm run dev
 ```
 
-[http://localhost:8787](http://localhost:8787)にアクセスし、「Hello Hono!」と表示されることを確認。  
+[http://localhost:8787](http://localhost:8787)にアクセスし、「Hello Hono!」と表示されることを確認します。  
