--- a/content/6.first-oss-contribution.md
+++ b/content/6.first-oss-contribution.md
@@ -3,7 +3,7 @@ title: "初めてOSSにコントビュートしました"
 description: "OSSへのコントリビュートという実績を解除したのできっかけなどをまとめる。"
 icon: "&#127882;"
 createdAt: "2024-4-22"
-updatedAt: "2024-4-22"
+updatedAt: "2024-4-23"
 tags: ['Vue.js']
 ---
 
@@ -13,34 +13,36 @@ https://github.com/vuejs/docs/pull/2814
 
 ## きっかけ
 
-Vue.jsのTransitionとTransition Groupの違いが知りたくて公式ドキュメントを漁っていた時のことです。  
-サンプルコードでulタグ直下がliタグではなく、divタグになっていることに気づいたことがきっかけです。  
+Vue.jsのTransitionとTransition Groupの違いを調査するため、公式ドキュメントを漁っていた時のことです。  
+サンプルコードでulタグ直下の要素がliタグではなく、divタグになっていることに気づいたことがきっかけです。  
 
 ## OSSコントリビュートまでの軌跡
 
-なにはともあれ、既に同じ問題に気づいている人がいる可能性があるため、Vue.jsの公式ドキュメントのリポジトリのissueを漁ってみることにしました。  
-今回、修正したい内容である「Transition Group」や「ul」、「list」といった単語を検索ワードとして使いつつ、issueを確認しましたが、特に重複するissueはなさそうでした。  
-もちろん、既にPull Requestが作成されている可能性などもあるのでPull Requestを確認したりと念入りに調べめました。  
-しばらく調査しましたが、どこにも同じないようissueやPull Requestが無かった、もしくは見つけられなかったため、まずはissueを作成することにしました。  
+### 〜issue作成
+既に同じ問題に気づいている人がいる可能性があるため、Vue.jsの公式ドキュメントのリポジトリのissueを漁ってみました。  
+修正したい内容である「Transition Group」や「ul」、「list」等の単語を検索ワードとして使いつつ、issueを確認しましたが、重複するissueを見つけることができませんでした。  
+既にPull Requestが作成されている可能性もあるのでPull Requestも確認しました。  
+その後も調査しましたが、どこにも重複するissueやPull Requestを見つけられなかったため、issueを作成することにしました。  
+Google翻訳等を活用し、issueを作成後、わずか数分で「bug」と「contribution welcome」というタグをコアチームメンバーの方が設定してくれました。  
 
-Google翻訳等を活用しつつ、issueを作成後、わずか数分で「bug」と「contribution welcome」というタグをコアチームメンバーの方が設定してくださりました。  
-その後、このissueを自分が担当していいのかどうかわからず、困りました。  
-「君が担当者だ！」ってアサインされるのを待つべきか勝手にPRを送るか...。  
-リポジトリに対する権限的にissueに自らをアサインすることができなかったため、しばらく悩みました。  
-もちろん、README.mdなど色々とドキュメントを漁りましたが、欲しい情報を見つけることはできませんでした。  
+## 〜Pull Request作成
+次に私はこのissueを自分が担当していいのかどうかわからず、路頭に迷いました。  
+「君が担当者だ！」とアサインされるのを待つべきか勝手にPRを送るってもいいのか...。  
+リポジトリに対する権限的にissueに対して自らをアサインすることができなかったため、ルールなどが記載されたドキュメントを探すことにしました。  
+README.mdなどの様々なドキュメントを漁りましたが、欲しい情報を見つけることはできませんでした。  
 他のissue等を覗きましたが、明確に担当者をアサインしているケースを見つけることができず、逆にissueを作成した人がそのままPull Requestを作成しているケースが多かったことと「contribution welcome」というタグを信じ、ダメ元でPull Requestを送ることにしました。  
+OSSへのコントリビュートが初めてだったため、fork等の慣れない作業は都度調べながら行いました。  
+修正内容は軽微だったため、すぐに修正を終え、Pull Requestを作成しました。  
 
-OSSへのコントリビュート自体が初めてだったため、forkしたり〜といった慣れない作業は都度調べながら行いました。  
-ドキュメントの修正自体は軽微なものだったのですぐ完了し、Pull Requestを作成しました。  
-Pull Request作成後、すぐにissueに反応してくださったコアメンバーの方が確認およびApproveをしてくださり、そのままMergeとなりました。  
-（ちゃっかり初歩的なミスもカバーしてくれました。）  
+### 〜Merge
+Pull Request作成後、すぐに自分が作成したissueに反応してくださったコアメンバーの方がレビューおよびApproveをしてくださり、そのままMergeとなりました。  
+（初歩的なミスもカバーしてくれました。）  
 
-以上で初のOSSコントリビュートが終了しました。  
+以上で初のOSSコントリビュートが無事に終了することができました。  
 
 ## OSSコントリビュートを経験してみた感想
 
 OSSと聞くと少し構えてしまうが、それよりもチャレンジしてみて良かったという気持ちが強いです。  
-簡単なドキュメント修正でしたが、初めてVitePressを触ってみることができたりと得られた収穫が大きいです。  
-ただ、コントリビュートする前に既に同じようなissueがないかを確認したり、コントリビュートに関するドキュメント等を確認することは徹底してほうが良さそうだと感じました。  
-また、今回はいきなりPull Requestを送りましたが、リポジトリのルールに従い、もし不安であればissueなどでコメントして事前に担当していいか確認するのが良いと思います。  
+簡単な修正でしたが、初めてVitePressを触ってみることができたりと得られた収穫が大きいです。  
+今回はいきなりPull Requestを送りましたが、リポジトリのルールはしっかり確認し、もし不安であればissueなどでコメントして事前に担当していいか確認するのが良いと思います。  
 これを機にOSS活動も頑張っていきたいです。
