--- a/content/1.released-on-nuxt-v3-11.md
+++ b/content/1.released-on-nuxt-v3-11.md
@@ -1,19 +1,19 @@
 ---
-title: "Nuxt.js v3.11がリリース"
-description: "2024年3月16日にリリースされたNuxt.js v3.11の内容をまとめる。"
+title: "Nuxt v3.11がリリース"
+description: "2024年3月16日にリリースされたNuxt v3.11の内容をまとめる。"
 icon: "&#127881;"
 createdAt: "2024-3-24"
 updatedAt: "2024-4-23"
-tags: ['Nuxt.js']
+tags: ['Nuxt']
 ---
 
-2024年3月16日にNuxt.js v3.11がリリースされました。  
+2024年3月16日にNuxt v3.11がリリースされました。  
 
 [https://nuxt.com/blog/v3-11](https://nuxt.com/blog/v3-11) 
 
-Nuxt.js v4リリース前の最後のマイナーバージョンリリースとのことです。  
+Nuxt v4リリース前の最後のマイナーバージョンリリースとのことです。  
 
-本記事では、Nuxt.js公式のブログを参考に気になる内容をまとめます。  
+本記事では、Nuxt公式のブログを参考に気になる内容をまとめます。  
 
 ## SSR時のログ出力
 
@@ -27,7 +27,7 @@ Server Componentを使用する際は、componentsディレクトリで使用す
 
 しかし、Server Componentは実験的な機能であるため、使用時には注意が必要そうです。  
 
-Nuxt.js v4のリリース時には安定版の機能として採用されることを期待したいと思います。  
+Nuxt v4のリリース時には安定版の機能として採用されることを期待したいと思います。  
 
 ## Teleportのターゲットが追加
 
