:books: fix typo

--- a/content/6.first-oss-contribution.md
+++ b/content/6.first-oss-contribution.md
@@ -1,5 +1,5 @@
 ---
-title: "初めてOSSにコントビュートしました"
+title: "初めてOSSにコントリビュートしました"
 description: "OSSへのコントリビュートという実績を解除したのできっかけなどをまとめる。"
 icon: "&#127882;"
 createdAt: "2024-4-22"
