:books: add supplement

--- a/content/2.husky-lint-staged.md
+++ b/content/2.husky-lint-staged.md
@@ -3,30 +3,35 @@ title: "Huskyとlint-stagedの設定手順"
 description: "2024年3月26日時点のHuskyとlint-stagedの設定手順についてまとめる。"
 icon: "&#129529;"
 createdAt: "2024-3-26"
-updatedAt: "2024-3-26"
+updatedAt: "2024-4-29"
 tags: ['husky', 'lint-staged']
 ---
 
+## Huskyとlint-stagedをインストールする
+
+Huskyとlint-stagedを開発環境で使用するため、次のコマンドを実行し、devDependenciesに各パッケージをインストールします。
+
+```bash
+npm install -D husky lint-staged
+```
+
 ## パッケージ情報
+
+2024年3月26日時点での各パッケージの最新バージョンを使用します。
+
+バージョンの詳細については以下の表を参照してください。
 
 | パッケージ名 | バージョン |
 | ---- | ---- |
 | [Husky](https://github.com/typicode/husky) | 9.0.11 |
 | [lint-staged](https://github.com/lint-staged/lint-staged) | 15.2.2 |
 
-## Huskyとlint-stagedをインストールする
-
-Huskyとlint-stagedを開発環境で使用するため、devDependenciesにパッケージをインストールします。
-
-```
-npm install -D husky lint-staged
-```
 
 ## Huskyの初期化
 
-Huskyを初期化します。
+Huskyを初期化するために次のコマンドを実行をします。
 
-```
+```bash
 npx husky init
 ```
 
@@ -34,13 +39,13 @@ npx husky init
 
 pre-commitでlint-stagedが実行されるようにコマンドを.husky/pre-commitに追加します。
 
-```
+```bash
 echo "npx lint-staged" > .husky/pre-commit
 ```
 
 ## package.jsonを修正
 
-package.jsonにlint-stagedの設定を追記します。
+最後にpackage.jsonにlint-stagedの設定を追加します。
 
 ```json
 {
@@ -52,3 +57,9 @@ package.jsonにlint-stagedの設定を追記します。
   },
 }
 ```
+
+## まとめ
+
+以上でHuskyとlint-stagedの設定を行うことができます。
+
+Huskyのバージョンがv9に上がったタイミングで設定周りが変更になっているため、v8より以前のバージョンとは設定手順が異なることに注意してください。
