--- a/content/4.get-started-with-elysiajs.md
+++ b/content/4.get-started-with-elysiajs.md
@@ -1,7 +1,7 @@
 ---
 title: "ElysiaJSに入門してみる"
 description: "ElysiaJSについての個人的なメモ。"
-icon: "&#129418;"
+emoji: "&#129418;"
 createdAt: "2024-04-07"
 updatedAt: "2024-04-23"
 tags: ['Bun', 'ElysiaJS']
