--- a/content/7. difference-between-defineexpose-and-provide-and-inject.md
+++ b/content/7. difference-between-defineexpose-and-provide-and-inject.md
@@ -1,7 +1,7 @@
 ---
 title: "defineExpose と Provide & Inject の違いについて"
 description: "データなどを共有したり、公開することができる defineExpose と Provide & Inject の違いについてまとめる。"
-icon: "&#127744;"
+emoji: "&#127744;"
 createdAt: "2024-04-24"
 updatedAt: "2024-05-25"
 tags: ['Vue.js']
