--- a/content/8.run-workflow-with-secrets-in-dependabot.md
+++ b/content/8.run-workflow-with-secrets-in-dependabot.md
@@ -1,7 +1,7 @@
 ---
 title: "Dependabot で secrets を使用するワークフローを実行する方法"
 description: "Dependabot によってプルリクエストが作成された際に secrets を使用したワークフローが失敗してしまうときの対処法についてまとめる。"
-icon: "&#x1f916;"
+emoji: "&#x1f916;"
 createdAt: "2024-05-07"
 updatedAt: "2024-05-07"
 tags: ["GitHub", "Dependabot"]
