--- a/content/2.husky-lint-staged.md
+++ b/content/2.husky-lint-staged.md
@@ -1,7 +1,7 @@
 ---
 title: "Husky と lint-staged の設定手順"
 description: "2024年3月26日時点の Husky と lint-staged の設定手順についてまとめる。"
-icon: "&#129529;"
+emoji: "&#129529;"
 createdAt: "2024-03-26"
 updatedAt: "2024-04-29"
 tags: ['husky', 'lint-staged']
