--- a/content/5.get-started-with-hono.md
+++ b/content/5.get-started-with-hono.md
@@ -1,7 +1,7 @@
 ---
 title: "Honoに入門してみる"
 description: "Honoについての個人的なメモ。"
-icon: "&#128293;"
+emoji: "&#128293;"
 createdAt: "2024-04-11"
 updatedAt: "2024-04-11"
 tags: ['Hono']
