--- a/content/6.first-oss-contribution.md
+++ b/content/6.first-oss-contribution.md
@@ -1,7 +1,7 @@
 ---
 title: "初めてOSSにコントリビュートしました"
 description: "OSSへのコントリビュートという実績を解除したのできっかけなどをまとめる。"
-icon: "&#127882;"
+emoji: "&#127882;"
 createdAt: "2024-04-22"
 updatedAt: "2024-04-23"
 tags: ['Vue.js']
