--- a/content/17.overflow-clip.md
+++ b/content/17.overflow-clip.md
@@ -3,28 +3,38 @@ title: "CSS の overflow: clip; について"
 description: "あまり聞き慣れないプロパティである overflow: clip; についてまとめる。"
 emoji: "&#x1f4ce;"
 createdAt: "2024-11-24"
-updatedAt: "2024-11-24"
+updatedAt: "2024-12-01"
 tags: ['CSS']
 ---
 
 ## &#x1f64b; はじめに
 
-overflow: clip; とは？
+overflow プロパティを使用する際に scroll や hidden 等を使う機会は多いですが、clip を使用する機会がなかったので調べた内容をまとめます。
 
-overflow プロパティを使用する際に scroll や hidden 等を使う機会は多いですが、clip を使用する機会がなかったのでこれを機に理解する。
+## overflow: clip; とは？
+
+MDN を読みながら理解を深めようと思います。
 
 https://developer.mozilla.org/ja/docs/Web/CSS/overflow#clip
 
-## clipの挙動について
+挙動について以下のように記載がありました。
 
 > 溢れたコンテンツは、overflow-clip-margin プロパティを使用して定義された要素のはみ出しクリップ辺で切り取られます。
 
 hidden と同じような挙動です。
 
-ただし、溢れたコンテンツをブラウザがどのように認識するかという点で hidden と clip には違いがあります。
+ただし、溢れたコンテンツをブラウザがどのように認識するかという点で hidden と clip には違いがあるようです。
 
-hidden によって切り取られたコンテンツは scrollTo() メソッド等を使用することでスクロールすることができますが、clip によって切り取られたコンテンツは scrollTo() メソッド等を使ってもスクロールすることができません。
+> 切り取られた領域の外側に溢れたコンテンツは表示されず、ユーザーエージェントはスクロールバーを追加せず、プログラムによるスクロールも行われません。新しい整形コンテキストは作成されません。
+
+hidden によって切り取られたコンテンツは scrollTo() メソッド等を使用することでスクロールすることができますが、clip によって切り取られたコンテンツは scrollTo() メソッド等を使ってもスクロールすることができないようです。
+
+## 単一方向におけるクリップ
+
+overflow-clip-margin を使用することでどれだけ外にはみ出すことができるかを指定することができます。
+
+https://developer.mozilla.org/ja/docs/Web/CSS/overflow-clip-margin
 
 ## まとめ
 
-overflow: clip; は、XXXXX。
+overflow: clip; は、溢れたコンテンツを切り取る CSS のプロパティで hidden とは異なり、プログラムによるスクロール操作ができない。
