--- a/content/16.get-started-with-nest-js.md
+++ b/content/16.get-started-with-nest-js.md
@@ -3,7 +3,7 @@ title: "NestJS に入門してみる"
 description: "NestJS についての個人的なメモ。"
 emoji: "&#x1f981;"
 createdAt: "2024-11-22"
-updatedAt: "2024-11-22"
+updatedAt: "2024-12-18"
 tags: ['NestJS']
 ---
 
@@ -188,3 +188,43 @@ export class AppModule {}
 ```
 
 http://localhost:3001/usres にアクセスし、[{"id":1,"name":"John"}] というユーザーのデータが返却されていることを確認します。
+
+ ## 環境変数の設定
+
+NestJSで環境変数を扱うには@nestjs/configを使用します。
+
+まずはインストールします。
+
+```bash
+pnpm add @nestjs/config
+```
+
+次にapp.module.tsのimportsに以下を追記します。
+
+```ts
+imports: [
+  ConfigModule.forRoot({
+    isGlobal: true, // グローバルに登録します
+  }),
+],
+```
+
+次に.envファイルを用意し、環境変数を宣言します。
+
+```
+DATABASE_USER=test
+```
+
+最後に環境変数をserviceで呼び出してみます。
+
+```ts
+export class AppService {
+  constructor(private configService: ConfigService) {}
+
+  getHello(): string {
+    return this.configService.get<string>('DATABASE_USER');
+  }
+}
+```
+
+testという文字列が返ってくることを確認します。
