--- a/content/20.call-once-composable.md
+++ b/content/20.call-once-composable.md
@@ -19,7 +19,7 @@ https://nuxt.com/docs/getting-started/state-management#initializing-state
 
 ## ナビゲーションモード
 
-Nuxt 3.15 で新たなに追加された機能です。
+Nuxt 3.15 で新たに追加された機能です。
 
 https://nuxt.com/blog/v3-15#%EF%B8%8F-navigation-mode-for-callonce
 
