:books: add method to mock

--- a/content/18.nuxt-color-mode.md
+++ b/content/18.nuxt-color-mode.md
@@ -3,7 +3,7 @@ title: "@nuxtjs/color-mode でダークモードを導入する方法"
 description: "Nuxt で実行したアプリにダークモードを導入したのでまとめる。"
 emoji: "&#x1f319;"
 createdAt: "2024-12-08"
-updatedAt: "2024-12-08"
+updatedAt: "2025-01-06"
 tags: ['Nuxt']
 ---
 
@@ -86,6 +86,36 @@ html.dark-mode {
 ダークモードを使用している場合です。
 
 ![本サイトをダークモードで表示したスクリーンショット](/images/content/dark-mode.png)
+
+## Storybook を使用している場合のモック方法
+
+Storybook で表示しようとすると @nuxtjs/color-mode の $colorMode が undefined となってしまい、エラーが表示されてしまいます。
+
+そこで、下記のように $colorMode をモックすることで Storybook でも $colorMode を使ったコンポーネントを表示することができるようになります。
+
+```ts
+export default {
+  render: () => ({
+    components: { コンポーネント名 },
+    setup() {
+      const colorMode = {
+        value: 'light',
+        preference: 'light',
+        unknown: false,
+        forced: false,
+      }
+      const app = getCurrentInstance()?.appContext.app
+      if (app) {
+        app.config.globalProperties.$colorMode = colorMode
+      }
+      return {}
+    },
+    template: `
+      <コンポーネント名 />
+    `,
+  }),
+}
+```
 
 ## まとめ
 
