:gear: add textlint rules

--- a/content/16.get-started-with-nest-js.md
+++ b/content/16.get-started-with-nest-js.md
@@ -191,7 +191,9 @@ http://localhost:3001/usres にアクセスし、[{"id":1,"name":"John"}] とい
 
  ## 環境変数の設定
 
+<!-- textlint-disable -->
 NestJSで環境変数を扱うには@nestjs/configを使用します。
+<!-- textlint-enable -->
 
 まずはインストールします。
 
