--- a/content/18.nuxt-color-mode.md
+++ b/content/18.nuxt-color-mode.md
@@ -19,7 +19,9 @@ https://color-mode.nuxtjs.org/
 npx nuxi module add color-mode
 ```
 
+<!-- textlint-disable -->
 nuxt.config.ts に以下のような設定が追加されていることを確認します。
+<!-- textlint-enable -->
 
 ```javascript
 export default defineNuxtConfig({
