:shirt: migrate Nuxt Content from v2 to v3 (#111)

--- a/content/10.get-aws-certified-solutions-architect-associate.md
+++ b/content/10.get-aws-certified-solutions-architect-associate.md
@@ -1,6 +1,7 @@
 ---
 title: "AWS Certified Solutions Architect - Associate を取得しました"
 description: "資格取得に向けた学習方法と実際に使用した教材等についてまとめる。"
+published: true
 emoji: "&#127800;"
 createdAt: "2024-06-16"
 updatedAt: "2024-06-16"
