--- a/content/11.html-tags-memory-test.md
+++ b/content/11.html-tags-memory-test.md
@@ -1,6 +1,7 @@
 ---
 title: "知らなかったHTMLタグについて"
 description: "知らないHTMLタグが多くあったため、備忘録として残す。"
+published: true
 emoji: "&#x1f4cc;"
 createdAt: "2024-07-21"
 updatedAt: "2024-07-23"
