--- a/content/12.codebuild-token-error.md
+++ b/content/12.codebuild-token-error.md
@@ -1,6 +1,7 @@
 ---
 title: "CodeBuild で「authentication required for primary source」が発生した場合の対処法"
 description: "CodeBuild でトークンエラーになった場合の対処法を備忘録として残す。"
+published: true
 emoji: "&#x1f41b;"
 createdAt: "2024-08-04"
 updatedAt: "2024-08-04"
