--- a/content/13.search-nuxt-content.md
+++ b/content/13.search-nuxt-content.md
@@ -1,6 +1,7 @@
 ---
 title: "NuxtContent の search で検索機能を実装する"
 description: "NuxtContent で作成したブログ内を検索する機能を実装する方法についてまとめる。"
+published: true
 emoji: "&#x1f50d;"
 createdAt: "2024-08-15"
 updatedAt: "2024-08-15"
