--- a/content/15.github-actions.md
+++ b/content/15.github-actions.md
@@ -1,6 +1,7 @@
 ---
 title: "GitHub Actions で issue を定期的に作成するワークフローを作ってみた"
 description: "定期的なタスクの対応漏れを防ぐ手段の1つとして GitHub Actions でワークフローを作成しました。"
+published: true
 emoji: "&#128368;"
 createdAt: "2024-10-02"
 updatedAt: "2024-10-02"
