--- a/content/16.get-started-with-nest-js.md
+++ b/content/16.get-started-with-nest-js.md
@@ -1,6 +1,7 @@
 ---
 title: "NestJS に入門してみる"
 description: "NestJS についての個人的なメモ。"
+published: true
 emoji: "&#x1f981;"
 createdAt: "2024-11-22"
 updatedAt: "2024-12-18"
