--- a/content/17.overflow-clip.md
+++ b/content/17.overflow-clip.md
@@ -1,6 +1,7 @@
 ---
 title: "CSS の overflow: clip; について"
 description: "あまり聞き慣れないプロパティである overflow: clip; についてまとめる。"
+published: true
 emoji: "&#x1f4ce;"
 createdAt: "2024-11-24"
 updatedAt: "2024-12-01"
