--- a/content/18.nuxt-color-mode.md
+++ b/content/18.nuxt-color-mode.md
@@ -1,6 +1,7 @@
 ---
 title: "@nuxtjs/color-mode でダークモードを導入する方法"
 description: "Nuxt で実行したアプリにダークモードを導入したのでまとめる。"
+published: true
 emoji: "&#x1f319;"
 createdAt: "2024-12-08"
 updatedAt: "2025-01-06"
