--- a/content/19.prisma-error.md
+++ b/content/19.prisma-error.md
@@ -1,6 +1,7 @@
 ---
 title: "npx prisma init でSupport for loading ES Module in require() is an experimental feature and might change at any time というエラーが出た場合の原因と対処法"
 description: "Prisma を使用した際に見慣れないエラーに遭遇したので備忘録として残す。"
+published: true
 emoji: "&#x1f612;"
 createdAt: "2024-12-22"
 updatedAt: "2024-12-22"
