--- a/content/20.call-once-composable.md
+++ b/content/20.call-once-composable.md
@@ -1,6 +1,7 @@
 ---
 title: "Nuxt 3.15 で追加された callOnce のナビゲーションモードについて"
 description: "callOnceとはどんな composable なのか、そして追加されたナビゲーションモードはどんなモードなのかをまとめる。"
+published: true
 emoji: "&#x1f384;"
 createdAt: "2024-12-25"
 updatedAt: "2024-12-27"
