--- a/content/21.option-display-none.md
+++ b/content/21.option-display-none.md
@@ -1,6 +1,7 @@
 ---
 title: "Safari で option 要素に display: none; が効かない時の対処法"
 description: "要素を非表示にする display: none; を指定したにも関わらず、表示されてしまう時の対処法についてまとめる"
+published: true
 emoji: "&#x1fae3;"
 createdAt: "2025-01-09"
 updatedAt: "2025-01-09"
