--- a/content/22.fix-msw-github-pages-error.md
+++ b/content/22.fix-msw-github-pages-error.md
@@ -1,6 +1,7 @@
 ---
 title: "Storybook で「[MSW] Failed to register a Service Worker for scope ('https://username.github.io/') with script ('https://reponame.github.io/mockServiceWorker.js'): Service Worker script does not exist at the given path.」が発生した場合の対処法"
 description: "Storybook と Mock Service Worker を使ったプロジェクトを GitHub Pages にデプロイしたらエラーになった場合の対処法を備忘録として残す。"
+published: true
 emoji: "&#x1f974;"
 createdAt: "2025-02-23"
 updatedAt: "2025-02-23"
