--- a/content/1.released-on-nuxt-v3-11.md
+++ b/content/1.released-on-nuxt-v3-11.md
@@ -1,6 +1,7 @@
 ---
 title: "Nuxt v3.11がリリース"
 description: "2024年3月16日にリリースされたNuxt v3.11の内容をまとめる。"
+published: true
 emoji: "&#127881;"
 createdAt: "2024-03-24"
 updatedAt: "2024-04-23"
