--- a/content/14.monorepo.md
+++ b/content/14.monorepo.md
@@ -1,6 +1,7 @@
 ---
 title: "pnpm の workspace を使ってみた"
 description: "pnpm の workspace を使って monorepo 構成のプロジェクト管理を体験してみた。"
+published: true
 emoji: "&#x1f516;"
 createdAt: "2024-09-26"
 updatedAt: "2024-09-26"
