--- a/content/3.improve-storycap.md
+++ b/content/3.improve-storycap.md
@@ -1,6 +1,7 @@
 ---
 title: "storycapの実行時間を短縮する"
 description: "フロントエンドのテスト手法の1つであるVisual Regression Testのツールであるstorycapの実行時間を短縮するための情報についてまとめる。"
+published: true
 emoji: "&#128640;"
 createdAt: "2024-04-04"
 updatedAt: "2024-04-04"
