--- a/content/4.get-started-with-elysiajs.md
+++ b/content/4.get-started-with-elysiajs.md
@@ -1,6 +1,7 @@
 ---
 title: "ElysiaJSに入門してみる"
 description: "ElysiaJSについての個人的なメモ。"
+published: true
 emoji: "&#129418;"
 createdAt: "2024-04-07"
 updatedAt: "2024-04-23"
