--- a/content/5.get-started-with-hono.md
+++ b/content/5.get-started-with-hono.md
@@ -1,6 +1,7 @@
 ---
 title: "Honoに入門してみる"
 description: "Honoについての個人的なメモ。"
+published: true
 emoji: "&#128293;"
 createdAt: "2024-04-11"
 updatedAt: "2024-04-11"
