--- a/content/9.toRef-and-toRefs.md
+++ b/content/9.toRef-and-toRefs.md
@@ -1,6 +1,7 @@
 ---
 title: "toRef と toRefs"
 description: "似た名前の toRef と toRefs の違いについて調べる。"
+published: true
 emoji: "&#x1F50D;"
 createdAt: "2024-05-27"
 updatedAt: "2024-05-28"
