:books: update nuxt-og-image article (#156)

--- a/content/23.nuxt-og-image.md
+++ b/content/23.nuxt-og-image.md
@@ -28,7 +28,7 @@ tags: ['Nuxt']
 export default defineNuxtConfig({
   ogImage: {
     fonts: [
-      'Noto+Sans+JP',
+      'Noto+Sans+JP:400',
     ]
   }
 })
@@ -37,6 +37,22 @@ export default defineNuxtConfig({
 Nuxt Dev Tools で文字化けが解消されていることを確認します。
 
 ![nuxt-og-imageによって生成されたOGP画像。日本語が文字化けしていない。](/images/content/nuxt-og-image-to-be.png)
+
+フォントは、${name}:${weight}　の形式で Google フォントを指定することができます。
+
+例えば、文字を太くしたい場合は下記のように指定します。
+
+```ts
+export default defineNuxtConfig({
+  ogImage: {
+    fonts: [
+      'Noto+Sans+JP:700', 
+    ]
+  }
+})
+```
+
+![nuxt-og-imageによって生成されたOGP画像。文字が太い。](/images/content/nuxt-og-image-font-weight.png)
 
 ## まとめ
 
