:books: update nuxt-og-image article (#156)

--- a/content/23.nuxt-og-image.md
+++ b/content/23.nuxt-og-image.md
@@ -14,7 +14,7 @@ tags: ['Nuxt']
 
 ただし、注意点として英語以外の言語に対応していません。
 
-そのため、私のように日本語でブログの記事を執筆している場合などに OGP 画像に表示させるテキストが文字化けしてしまいます。
+そのため、私のように日本語でブログの記事を執筆している場合、 OGP 画像に表示させるテキストが文字化けしてしまいます。
 
 ![nuxt-og-imageによって生成されたOGP画像。日本語が文字化けしている。](/images/content/nuxt-og-image-as-is.png)
 
@@ -57,3 +57,8 @@ export default defineNuxtConfig({
 ## まとめ
 
 - nuxt-og-image で英語以外のテキストを使用する場合は明示的にフォントを指定する必要がある
+
+## 参考記事
+
+- https://nuxtseo.com/docs/og-image/guides/non-english-locales
+- https://nuxtseo.com/docs/og-image/guides/custom-fonts
