:books: remove emoji from articles

--- a/content/10.get-aws-certified-solutions-architect-associate.md
+++ b/content/10.get-aws-certified-solutions-architect-associate.md
@@ -8,7 +8,7 @@ updatedAt: "2024-06-16"
 tags: ['AWS']
 ---
 
-## &#128587; 私について
+## 私について
 
 私は普段、フロントエンドエンジニアとしてフロントエンド開発業務を担当しています。
 
@@ -23,13 +23,13 @@ tags: ['AWS']
 
 他にも、ECS や Codeシリーズなどで構成されたサービス開発に携わることはありますが、実際に設定を変更したりすることはありません。
 
-## &#128220; 試験について
+## 試験について
 
 2024年4月1日から料金が改定され、受験費用は22,000円でした。
 
 弊社では、試験に合格すると資格試験の受験費用を肩代わりしてくれる制度があるため、実質0円です。
 
-## &#128213; 学習に使用した教材
+## 学習に使用した教材
 
 私が主に使用した教材は Udemy の教材です。
 
@@ -43,7 +43,7 @@ https://www.udemy.com/course/aws-associate/
 
 https://www.youtube.com/results?search_query=aws+blackbelt
 
-## &#128395; 学習方法
+## 学習方法
 
 ### 1. 試験突破講座の動画を視聴する
 
@@ -73,7 +73,7 @@ https://www.youtube.com/results?search_query=aws+blackbelt
 
 また、模擬試験を解いた後は、模擬試験を解いた時間と同じかそれ以上に解説を読んで振り返る時間を設けるようにしていました。
 
-## &#x2705; まとめ
+## まとめ
 
 結果、無事に合格することができました！
 
