--- a/content/11.html-tags-memory-test.md
+++ b/content/11.html-tags-memory-test.md
@@ -8,7 +8,7 @@ updatedAt: "2024-07-23"
 tags: ['HTML']
 ---
 
-## &#x1f4dd; HTML Tags Memory Test
+## HTML Tags Memory Test
 
 114個のHTMLタグいくつ覚えているか？というテストでしたが、知らないHTMLタグが数多くありました。
 
@@ -16,7 +16,7 @@ tags: ['HTML']
 
 https://codepen.io/plfstr/full/zYqQeRw
 
-## &#x1f4d9; 知らなかったHTMLタグ
+## 知らなかったHTMLタグ
 
 ### `<address>`
 
@@ -278,7 +278,7 @@ https://developer.mozilla.org/ja/docs/Web/HTML/Element/wbr
 https://developer.mozilla.org/ja/docs/Web/HTML/Element/meter
 
 
-## &#x1f9ea; 実験的な機能
+## 実験的な機能
 
 ### `<portal>`
 
@@ -288,6 +288,6 @@ https://developer.mozilla.org/ja/docs/Web/HTML/Element/meter
 
 https://developer.mozilla.org/ja/docs/Web/HTML/Element/portal
 
-## &#x2705; まとめ
+## まとめ
 
 セマンティックな実装ができるように心がけていきます。
