--- a/content/12.codebuild-token-error.md
+++ b/content/12.codebuild-token-error.md
@@ -8,11 +8,11 @@ updatedAt: "2024-08-04"
 tags: ['AWS']
 ---
 
-## &#x1f41b; エラー
+## エラー
 
 「authentication required for primary source」というエラーが発生しました。
 
-## &#x1f44d; 対処法
+## 対処法
 
 一度、CodeBuild と GitHub の接続を切断します。
 
@@ -20,6 +20,6 @@ tags: ['AWS']
 
 有効なトークンを入力および保存をした上で再ビルドを実行すると成功しました。
 
-## &#x2705; まとめ
+## まとめ
 
 特にチーム開発をしている場合は、退職者のトークンを使用していないか注意しましょう。
