--- a/content/13.search-nuxt-content.md
+++ b/content/13.search-nuxt-content.md
@@ -8,7 +8,7 @@ updatedAt: "2024-08-15"
 tags: ['Nuxt']
 ---
 
-## &#129514; 前提
+## 前提
 
 NuxtContent の検索機能である search は、2024年8月15日時点で実験的な機能です。
 
@@ -28,7 +28,7 @@ export default defineNuxtConfig({
 })
 ```
 
-## &#128736; 検索機能の実装
+## 検索機能の実装
 
 今回、検索機能のロジックは composable として切り出して作成しました。
 
@@ -53,7 +53,7 @@ computedAsync は、VueUse の composable です。
 
 [公式サイト](https://content.nuxt.com/usage/search#search)の通りに進めると私の環境では検索結果がリアクティブに変更されなかったため、computedAsync を使用してリアクティブに検索結果を取得できるようにしました。
 
-## &#128154; 検索処理の呼び出し
+## 検索処理の呼び出し
 
 あとは作成した composable を呼び出し、検索キーワードを入力するフォームと検索結果を表示する要素を用意するだけです。
 
@@ -68,6 +68,6 @@ const { keyword, results } = useSearch();
 </template>
 ```
 
-## &#x2705; まとめ
+## まとめ
 
 簡単に検索を実装することができるため、正式な機能としてリリースされることを期待したいです。
