--- a/content/14.monorepo.md
+++ b/content/14.monorepo.md
@@ -8,12 +8,12 @@ updatedAt: "2024-09-26"
 tags: ['pnpm']
 ---
 
-## &#x1f64b; はじめに
+## はじめに
 
 私はこれまでモノレポのプロダクトに携わったことがなく、モノレポ構成のイメージが持てずにいました。
 そこで、試しに自分でもモノレポ構成のリポジトリを作ってみようと思い、実際に試してみたので備忘録として残します。
 
-## &#128293; 実際に試してみる
+## 実際に試してみる
 
 今回、モノレポ構成の練習台に選ばれたのは Zenn の記事を管理しているリポジトリです。
 
@@ -65,7 +65,7 @@ packages:
 
 --filter は -F という省略形もあるようです。
 
-## &#x2705; まとめ
+## まとめ
 
 手軽に pnpm の workspace を導入することができました。
 
