--- a/content/17.overflow-clip.md
+++ b/content/17.overflow-clip.md
@@ -8,7 +8,7 @@ updatedAt: "2024-12-01"
 tags: ['CSS']
 ---
 
-## &#x1f64b; はじめに
+## はじめに
 
 overflow プロパティを使用する際に scroll や hidden 等を使う機会は多いですが、clip を使用する機会がなかったので調べた内容をまとめます。
 
