--- a/content/8.run-workflow-with-secrets-in-dependabot.md
+++ b/content/8.run-workflow-with-secrets-in-dependabot.md
@@ -8,7 +8,7 @@ updatedAt: "2024-05-07"
 tags: ["GitHub", "Dependabot"]
 ---
 
-## &#10060; secrets を使用したワークフローが失敗する
+## secrets を使用したワークフローが失敗する
 
 先日、chromatic を GitHub Actions で実行するようなワークフローを追加しました。
 
@@ -29,7 +29,7 @@ or pass the --project-token command line option.
 
 調査を進める中で Dependabot は actions に設定されている secrets を読み込むことができないということがわかりました。
 
-## &#x2705; 解決策
+## 解決策
 
 Dependabot secrets を使用することで解決することができます。
 
