--- a/content/9.toRef-and-toRefs.md
+++ b/content/9.toRef-and-toRefs.md
@@ -8,7 +8,7 @@ updatedAt: "2024-05-28"
 tags: ["Vue.js"]
 ---
 
-## &#x2753; toRef について
+## toRef について
 
 toRef は、引数として与えられた値から ref を作成します。
 
@@ -84,7 +84,7 @@ const count = toRef(() => props.count);
 </template>
 ```
 
-## &#x2753; toRefs について
+## toRefs について
 
 toRefs は、reactive によって宣言されたリアクティブなオブジェクトの各プロパティを toRef によって ref に変換します。
 
@@ -112,6 +112,6 @@ console.log(stateAsRefs.age.value); // 22
 
 toRefs を使用して ref を生成する場合、.value を使用してアクセスする必要があることに注意してください。
 
-## &#x2705; まとめ
+## まとめ
 
 toRef は引数から ref を生成し、toRefs はリアクティブなオブジェクトから toRef を使用して個別の ref を生成します。
